# CloudSREEnv-Hackathon

./: .dockerignore  .gitignore  BLOG.md  Dockerfile  README.md  env.py  inference.py  openenv.yaml  prompts.py  pyproject.toml  requirements.txt  train.py  train_sft.py  train_unsloth.py
scripts/: evaluate_benchmarks.py  generate_benchmark_plot.py  generate_readme_assets.py  train_loss_epoch_plot.py  unsloth_train_loss_epoch_plot.py
server/: app.py
