[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudsreenv"
version = "1.0.0"
description = "CloudSRE OpenEnv simulator for Kubernetes-style infrastructure"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.1.0",
    "pydantic>=2.0,<3.0",
    "openai>=1.30,<2.0",
    "pandas>=2.0,<3.0",
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pyyaml>=6.0"
]

[tool.setuptools]
py-modules = ["env"]